# crabigator

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
src/: app.rs  app_v2.rs  banner.rs  capture.rs  cli.rs  cloud.rs  config.rs  escape.rs  fixtures_tests.rs  hooks.rs  ide.rs  input.rs  inspect.rs  main.rs  mirror.rs  mode.rs  parsers.rs  platforms.rs  terminal.rs  ui.rs  utils.rs
src/cloud/: client.rs  device.rs  events.rs  queue.rs  websocket.rs
src/events/: handler.rs  mod.rs
src/git/: mod.rs  status.rs
src/hooks/: claude_hooks.rs  mod.rs  session_stats.rs
src/parsers/: generic.rs  mod.rs  objc.rs  python.rs  rust.rs  summary.rs  swift.rs  types.rs  typescript.rs
src/pty/: claude.rs  mod.rs
src/terminal/: dsr.rs  escape.rs  input.rs  osc.rs  pty.rs
src/ui/: changes.rs  git.rs  layout.rs  mod.rs  sparkline.rs  stats.rs  status_bar.rs  utils.rs
src/ui/widgets/: claude_pane.rs  claude_stats.rs  debug_hud.rs  diff_summary.rs  git_status.rs  mod.rs
src/widgets/: changes.rs  git.rs  mod.rs  stats.rs
tests/fixtures/multi_lang/: expected.json  fixture.json
tests/fixtures/rust_planning/: expected.json  fixture.json
tests/fixtures/rust_planning/worktree/: notes.txt
workers/crabigator-api/: package-lock.json  package.json  test-answer.sh  test-events.sh  test-state.sh  tsconfig.json  wrangler.toml
workers/crabigator-api/migrations/: 0001_initial.sql
workers/crabigator-api/src/: dashboard.ts  index.ts  router.ts
workers/crabigator-api/src/auth/: middleware.ts  tokens.ts
workers/crabigator-api/src/types/: api.ts  (+2 more)
(+11 files in other folders)
