[package]
name = "crabigator"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
