[package]
name = "crabigator"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
toml = "0.8"

# Cloud integration
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
uuid = { version = "1.0", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
hostname = "0.4"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
